<resources>
    <string name="app_name">Design Pattern</string>
    <string name="item_catalog">Catalog: </string>
    <string name="filter_by_catalog">By catalog</string>
    <string name="filter_by_language">By language</string>
    <string name="catalog">Catalog</string>
    <string name="language">Language</string>

    <!-- Font -->
    <string name="arial">Arial</string>
    <string name="pacifico_regular">Pacifico Regular</string>
    <string name="playfair">Playfair</string>
    <string name="poetsen_one">Poetsen One</string>
    <string name="poppins">Poppins</string>
    <string name="pt_serif">PT Serif</string>
    <string name="raleway">Raleway</string>
    <string name="roboto">Roboto</string>
    <string name="roboto_condensed">Roboto Condensed</string>
    <string name="time_new_roman">Time New Roman</string>

    <!--  ChangeLanguage   -->
    <string name="change_language">App language</string>
    <string name="language_vi">Vietnamese</string>
    <string name="language_en">English</string>

    <!--  DisplayMode  -->
    <string name="display_mode">Choose a display mode</string>
    <string name="display_mode_light">Light</string>
    <string name="display_mode_dark">Dark</string>
    <string name="display_mode_system">System default</string>
    <string name="button_cancel">Cancel</string>

    <!--  Setting  -->
    <string name="setting_title">Setting</string>
    <string name="setting_display">Display</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_other">Others</string>
    <string name="setting_feedback">Send feedback</string>
    <string name="setting_sub_feedback">Help improve this application</string>
    <string name="collection">Collection</string>
    <string name="SubBookMark">Read-later patterns</string>
    <string name="SubFavourite">Favourite Patterns</string>

    <!--  Contact  -->
    <string name="question_general">What do you want to tell us?</string>
    <string name="rbtn_question">Question</string>
    <string name="rbtn_report">Bug report</string>
    <string name="rbtn_suggestion">Suggestion</string>
    <string name="rbtn_compliment">Compliment</string>
    <string name="rbtn_others">Other</string>
    <string name="contact_question_se">What is your inquiry about?</string>
    <string name="contact_rbtn_records">Records</string>
    <string name="contact_rbtn_migration">Migration</string>
    <string name="contact_rbtn_features">Features</string>
    <string name="contact_rbtn_supports">Supports</string>
    <string name="contact_content">Content</string>
    <string name="contact_text_notice">Notice</string>
    <string name="contact_notice_content">• It may take up to 7 days for our support team to get back to you.\n• Abusive language or spam will not be tolerated.\n• By pressing [Send], you agree to the Terms of Service and Privacy Policy.</string>
    <string name="contact_rbtn_send">Send</string>
    <string name="contact_title">Contact us</string>
    <string name="contact_text_hint">Your message</string>
    <string name="contact_max_image">You selected the maximum number of images"</string>
    <string name="contact_allow_image">You can only select up to 1 images</string>

    <string name="overview_of_the_content">Overview of the content you have learned</string>
    <string name="how_to_apply_patterns_to_exercises">How to apply patterns to exercises</string>
    <string name="description_of_the_problem_and_intent">Description of the problem and intent</string>
    <string name="intent_problem">Intent and Problem</string>
    <string name="solution_and_implementation">Solution and implementation</string>
    <string name="solution_implement">Solution and How to implement</string>
    <string name="techniques_and_structure">Techniques and structure</string>
    <string name="structure_pseudocode">Structure and Pseudocode</string>
    <string name="evaluation_and_application">Evaluation and application</string>
    <string name="evaluation_application">Pros, Cons and Applicability</string>
    <string name="your_comments">Your comments</string>

    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="star_rating">Star rating: </string>

    <string name="thanks_for_submitting">Thanks for submitting a review</string>
    <string name="done">Done</string>
    <string name="code">Code</string>
    <string name="assignment">Assignment</string>
    <string name="video">Tutorial video</string>
    <string name="next_question">Next question</string>
    <string name="check">Check</string>

    <string name="intent">Intent</string>
    <string name="problem">Problem</string>
    <string name="solution">Solution</string>
    <string name="structure">Structure</string>
    <string name="pseudocode">Pseudocode</string>
    <string name="applicability">Applicability</string>
    <string name="how_to_implement">How To Implement</string>
    <string name="pros_and_cons">Pros And Cons</string>
    <string name="click_here">Click here to view</string>
    <string name="overview">Overview</string>

    <!--menu navigation-->
    <string name="menu_progress">Progress</string>
    <string name="menu_learning">Learning</string>
    <string name="menu_assignment">Assignment</string>
    <string name="menu_setting">Setting</string>

    <string name="question">Question</string>

    <!--Homework Status-->
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>


    <!-- Progress    -->
    <string name="Inception">Inception!!!</string>
    <string name="Foundation">Foundation!!!</string>
    <string name="Potential">Potential!!!</string>
    <string name="Excellent">Excellent!!!</string>

    <!--  BookMark and Favourite  -->
    <string name="DesignPatternNullFavourite">You have not added any Design Patterns to your favorites!</string>
    <string name="DesignPatternNullBookMark">You have not bookmarked any Design Patterns!</string>
    <string name="BookmarkName">Bookmark</string>
    <string name="FavouriteName">Favourite</string>

    <!-- ShowListResultAdapter   -->
    <string name="CorrectAnswer">Correct answer</string>
    <string name="WrongAnswer">Wrong answer</string>
    <string name="QuestionName">Question</string>
    <string name="redo">Redo</string>
    <string name="review_the_theory">Review the theory</string>
    <string name="string1_result">You answered</string>
    <string name="string2_result">questions correctly</string>
    
    <string name="correct_answer">Correct answer</string>
    <string name="wrong_answer">Wrong answer</string>
</resources>